--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Visa Image</title>
-    <style>
-      body {
-        margin: 0;
-        background-color: #ffffff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      img {
-        max-width: 100%;
-        max-height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-<img src=visa alt="Visa Image" />
- </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Visa Image</title>
+  <style>
+    html, body {
+      margin: 0;
+      background-color: #ffffff;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    img {
+      max-width: 100%;
+      max-height: 100vh;
+      background: #ffffff;
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <img src="/visa-gov-222b10921034/visa" alt="Visa Image" />
+</body>
 </html>
